force-app/main/default/objects/ccrz__E_Permissions__c/ccrz__E_Permissions__c.object-meta.xml
<CustomObject>
    <label>E_Permissions</label>
    <nameField>
        <label>E_Permissions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>E_Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>