force-app/main/default/objects/ccrz__E_Permissions__c/fields/ccrz__Account__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>E_Permissions</relationshipLabel>
    <relationshipName>E_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>