force-app/main/default/objects/ccrz__E_Permissions__c/fields/ccrz__Status__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>